<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fundo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_enquete"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOption2"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_option2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/txtOption3"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/text_option3"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/txtOption1"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_option1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="128dp"
        android:layout_height="456dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnVotar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtOption2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbOption1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autoText="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="103dp" />

        <RadioButton
            android:id="@+id/rbOption2"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="98dp" />

        <RadioButton
            android:id="@+id/rbOption3"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnVotar"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:drawableEnd="@drawable/ic_send"
        android:text="@string/btn_votar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="157dp"
        android:layout_height="120dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/inter" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="121dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/gremio" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/caxias" />

</androidx.constraintlayout.widget.ConstraintLayout>